Medium scaling no longer overflows in Firefox.

--- a/client/styles/components/_medium.scss
+++ b/client/styles/components/_medium.scss
@@ -1,9 +1,12 @@
 .mediumContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-  width: 100%;
+    width: 100%;
+    max-height: calc(100vh - 128px);
+  }
 
   .medium {
     max-width: 100%;
@@ -11,6 +14,8 @@
 
     width: auto;
     height: auto;
+
+    object-fit: contain;
   }
 
   img.medium {
